# jacobs-ladder

./: CLAUDE.md  README.md  package.json  plugin.js  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-03-26-jacobs-ladder.md
docs/superpowers/specs/: 2026-03-26-jacobs-ladder-design.md
jacobs_ladder/: __init__.py  buffer.py  cli.py  discovery.py
jacobs_ladder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skills/jacobs-ladder/: SKILL.md
tests/: test_buffer.py  test_cli.py  test_discovery.py
