[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jacobs-ladder"
version = "0.1.0"
description = "Inter-Claude-Code instance communication via local pub/sub buffers"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
jacobs-ladder = "jacobs_ladder.cli:cli"

[tool.setuptools.packages.find]
include = ["jacobs_ladder*"]
